lustre/utils/liblustreapi_hsm.c
@@ -448,7 +448,7 @@ out_free:
  * \retval 0 on success.
  * \retval -errno on error.
  */
-int llapi_hsm_register_event_fifo(char *path)
+int llapi_hsm_register_event_fifo(const char *path)
 {
 	int read_fd;
 	struct stat statbuf;
@@ -511,7 +511,7 @@ int llapi_hsm_register_event_fifo(char *path)
  * \retval 0 on success.
  * \retval -errno on error.
  */
-int llapi_hsm_unregister_event_fifo(char *path)
+int llapi_hsm_unregister_event_fifo(const char *path)
 {
 	/* Noop unless the event fd was initialized */
 	if (llapi_hsm_event_fd < 0)
